welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	avance()
	if (Color.green) {
		avance()
	} else {
		gauche()
		avance()
	}
    // Write your code here
}        
